# libra-framework

./: .gitignore  .pre-commit-config.yaml  Cargo.orig  Cargo.toml  README.md  aptos_to_diem.sh  fix_vfn_values.sh  private-keys.yaml  proposal.move  public-keys.yaml  validator-full-node-identity.yaml  validator-identity.yaml
e2e_tests/: Cargo.toml
e2e_tests/fixtures/proposal_script/: Move.toml  script.mv
e2e_tests/src/: mod.rs
e2e_tests/tests/: scripts.rs
framework/: Cargo.toml  Makefile  hot_upgrades.md  prover.mk
framework/cached-packages/: Cargo.toml  build.rs
framework/cached-packages/src/: aptos_framework_sdk_builder.rs  aptos_stdlib.rs  lib.rs  libra_framework_sdk_builder.rs  libra_stdlib.rs  main.rs  release.rs
framework/drop-user-tools/: README.md  account_with_drop.move  jail_with_gc.move  last_goodbye.move  last_goodbye.test.move  pledge_accounts_with_gc.move  slow_wallet_with_gc.move  validator_universe_with_gc.move  vouch_with_gc.move
framework/hard-fork-tools/: jail_with_gc.move  last_goodbye.test.move  match_index_with_gc.move  validator_universe_with_gc.move  vouch_with_gc.move
framework/libra-framework/: Move.toml  entry_functions.md
framework/libra-framework/backup_specs/: burn.spec.move  demo.spec.move  libra_coin.spec.move  ol_account.spec.move  sacred_cows.spec.move  slow_wallet.spec.move  vouch.spec.move
framework/libra-framework/doc/: account.md  aggregator_factory.md  ancestry.md  aptos_account.md  aptos_coin.md  aptos_governance.md  block.md  cases.md  chain_id.md  chain_status.md  code.md  coin.md  consensus_config.md  create_signer.md  demo.md  dummy.md  epoch_boundary.md  event.md  execution_config.md  fifo.md  fungible_asset.md  gas_coin.md  gas_schedule.md  genesis.md  genesis_migration.md  globals.md  infra_escrow.md  jail.md  mock.md  multisig_account.md  musical_chairs.md  object.md  ol_account.md  optional_aggregator.md  overview.md  persistence_demo.md  pledge_accounts.md  primary_fungible_store.md  proof_of_fee.md  receipts.md  (+21 more)
framework/libra-framework/doc_template/: overview.md  references.md
framework/libra-framework/sources/: account.move  block.move  block.spec.move  chain_id.move  chain_id.spec.move  chain_status.move  chain_status.spec.move  code.move  code.spec.move  coin.move  consensus_config.spec.move  create_signer.move  diem_account.move  diem_coin.move  diem_governance.move  diem_governance.spec.move  event.move  event.spec.move  fungible_asset.move  fungible_asset.spec.move  genesis.move  governance_proposal.move  governance_proposal.spec.move  guid.move  guid.spec.move  leaderboard.move  multisig_account.move  object.move  object.spec.move  primary_fungible_store.move  primary_fungible_store.spec.move  randomness.move  reconfiguration.move  reputation.move  resource_account.move  resource_account.spec.move  stake.move  stake.spec.move  state_storage.move  state_storage.spec.move  (+18 more)
framework/move-stdlib/: Cargo.toml
framework/move-stdlib/sources/: bcs.move  error.move
framework/move-stdlib/src/: lib.rs
framework/move-stdlib/tests/: ol_vdf_tests.move
framework/releases/: fresh.mrb  head-25-apr-23.mrb  head.mrb  mainnet.mrb  release-6.9.6.mrb  release-6.9.7.mrb  release-6.9.8.mrb  release-7.0.0.mrb  release-7.0.1.mrb  release-7.0.2.mrb  release-7.0.3.mrb  release-7.0.4.mrb  test_script.move
framework/sources/: chain_id.move  system_addresses.move
framework/sources/modified_source/: account.move  coin.move  genesis.move  reconfiguration.spec.move  stake.move  transaction_fee.move  transaction_fee.spec.move
framework/sources/modified_specs_only/: block.spec.move  consensus_config.spec.move  (+1 more)
framework/src/: framework_cli.rs  lib.rs  main.rs  release.rs
framework/vendor-stdlib/: Move.toml
smoke-tests/: Cargo.toml  Makefile  Readme.md  dump.txt
smoke-tests/src/: brain_salad_surgery.rs  configure_validator.rs  extract_credentials.rs  helpers.rs  lib.rs  libra_smoke.rs  public_info.rs  start.rs  upgrade_fixtures.rs
smoke-tests/tests/: backup.todo  balance.rs  epoch.todo  meta.rs  mod.depr  sync.rs  upgrade.rs
testsuites/twin/: Cargo.toml  Makefile  transactions.mk  twin.mk
tools/cli/: Cargo.toml  build.rs
tools/config/: Cargo.toml
tools/genesis/: Cargo.toml  Makefile  README.md  genesis_instructions.md
tools/node/: Cargo.toml
tools/query/: Cargo.toml
tools/rescue/: Cargo.toml  Makefile  README.md  out.txt
tools/storage/: Cargo.toml  README.md  example.makefile  main.rs  migrate.rs
tools/testnet/: Cargo.toml  Makefile  README.md
tools/tower/: Cargo.toml
tools/txs/: Cargo.toml  Makefile  README.md
tools/wallet/: Cargo.toml  README.md  about.md  private-keys.yaml  public-keys.yaml  validator-full-node-identity.yaml  validator-identity.yaml
transactional-tests/: Cargo.toml
transactional-tests/src/: tests.rs
transactional-tests/tests/: ol_demo_execute_script.exp  ol_demo_execute_script.move  vdf.move
types/: Cargo.toml
types/src/: gas_coin.rs  lib.rs  ol_progress.rs  test_drop_helper.depr  test_drop_helper.rs  tower.rs  util.rs
upgrade-tests/: Cargo.toml
upgrade-tests/tests/: backwards_compatible_mainnet.rs  check_workflow_head.rs  force_upgrade_mainnet.rs  force_upgrade_twin.rs  head_noop_checks_workflow.rs  mainnet_breaking.rs  mainnet_compatible.rs  twin_of_mainnet_upgrades.rs  twin_upgrades.rs
warehouse/: Cargo.toml  profile.json
warehouse/src/: age_init.rs  cypher_templates.rs  extract.rs  extract_snapshot.rs  extract_transactions.rs  lib.rs  load.rs  load_account.rs  load_coin.rs  load_entrypoint.rs  load_supporting_data.rs  load_tx_cypher.rs  main.rs  migrate.rs  neo4j_init.rs  query_balance.rs  queue.rs  restaurant.rs  scan.rs  supporting_data.rs  table_structs.rs  unzip_temp.rs  warehouse_cli.rs
warehouse/tests/: e2e.rs  exp_postgres_snapshot.rs  init.rs  lib.rs  scan_dirs.rs  sqlx_meta.rs  test_e2e.rs  test_e2e_sanpshot.rs  test_e2e_tx_neo4j.rs  test_extract.rs  test_extract_transactions.rs  test_load.rs  test_load_cypher_tx.rs  test_migrate.rs  test_neo4j_meta.rs  test_queue.rs  test_scan_dirs.rs  test_supporting_data.rs  test_unzip.rs
(+1151 files in other folders)
