[workspace]
resolver = "2"

members = [
  "e2e_tests",
  "framework",
  "framework/cached-packages",
  "smoke-tests",
  "tools/cli",
  "tools/config",
  "tools/genesis",
  "tools/query",
  "tools/tower",
  "tools/txs",
  "tools/wallet",
  "transactional-tests",
  "types",
]

# All workspace members should inherit these keys for package declarations.
[workspace.package]
authors = ["libra contributors"]
edition = "2021"
homepage = "https://0l.network/"
license = "Apache-2.0"
publish = false
repository = "https://github.com/0LNetworkCommunity/libra-v7"
rust-version = "1.66.1"

[workspace.dependencies]
### Internal crate dependencies.
# Internal crate dependencies.
libra-cached-packages = { path = "framework/cached-packages" }
libra-config = { path = "tools/config" }
libra-framework = { path = "framework" }
libra-query = { path = "tools/query" }
libra-smoke-tests = { path = "smoke-tests" }
libra-tower = { path = "tools/tower" }
libra-types = { path = "types" }
libra-txs = { path = "tools/txs" }
libra-wallet = { path = "tools/wallet" }
vdf = { git = "https://github.com/0o-de-lally/verifiable_delay.git" }
# ol-types = { git = "https://github.com/simsekgokhan/libra.git", branch = "v6-dwh-err" }

# Please do not add any test features here: they should be declared by the
# individual crate.

zapatos-api-types = { package = "aptos-api-types", git = "https://github.com/0o-de-lally/zapatos.git", rev = "3e524a2d" }
zapatos-debugger = { package = "aptos-debugger", git = "https://github.com/0o-de-lally/zapatos.git", rev = "3e524a2d" }
zapatos-db = { package = "aptos-db", git = "https://github.com/0o-de-lally/zapatos.git", rev = "3e524a2d" }
zapatos-forge = { package = "aptos-forge", git = "https://github.com/0o-de-lally/zapatos.git", rev = "3e524a2d" }
zapatos-transactional-test-harness = { package = "aptos-transactional-test-harness", git = "https://github.com/0o-de-lally/zapatos.git", rev = "3e524a2d" }
# aptos-types = { git = "https://github.com/0o-de-lally/zapatos.git", rev = "3e524a2d" }
zapatos-smoke-test = { package = "smoke-test", git = "https://github.com/0o-de-lally/zapatos.git", rev = "3e524a2d" }

zapatos = { package = "aptos", git = "https://github.com/0o-de-lally/zapatos.git", rev = "3e524a2d" }
zapatos-build-info= { package = "aptos-build-info", git = "https://github.com/0o-de-lally/zapatos.git", rev = "3e524a2d"}
zapatos-node = { package = "aptos-node", git = "https://github.com/0o-de-lally/zapatos.git", rev = "3e524a2d" }
zapatos-rest-client = { package = "aptos-rest-client", git = "https://github.com/0o-de-lally/zapatos.git", rev = "3e524a2d" }
zapatos-sdk = { package = "aptos-sdk", git = "https://github.com/0o-de-lally/zapatos.git", rev = "3e524a2d" }
zapatos-config = { package = "aptos-config", git = "https://github.com/0o-de-lally/zapatos.git", rev = "3e524a2d" }
zapatos-crypto = { package = "aptos-crypto", git = "https://github.com/0o-de-lally/zapatos.git", rev = "3e524a2d"}
zapatos-genesis = { package = "aptos-genesis", git = "https://github.com/0o-de-lally/zapatos.git", rev = "3e524a2d"}
zapatos-keygen = { package = "aptos-keygen", git = "https://github.com/0o-de-lally/zapatos.git", rev = "3e524a2d" }
zapatos-logger = { package = "aptos-logger", git = "https://github.com/0o-de-lally/zapatos.git", rev = "3e524a2d" }
zapatos-types = { package = "aptos-types", git = "https://github.com/0o-de-lally/zapatos.git", rev = "3e524a2d"}
zapatos-gas = { package = "aptos-gas", git = "https://github.com/0o-de-lally/zapatos.git", rev = "3e524a2d"}
zapatos-vm = { package = "aptos-vm", git = "https://github.com/0o-de-lally/zapatos.git", rev = "3e524a2d"}
zapatos-vm-genesis = { package = "aptos-vm-genesis", git = "https://github.com/0o-de-lally/zapatos.git", rev = "3e524a2d"}
zapatos-executor= { package = "aptos-executor", git = "https://github.com/0o-de-lally/zapatos.git", rev = "3e524a2d"}
zapatos-framework = { package = "aptos-framework", git = "https://github.com/0o-de-lally/zapatos.git", rev = "3e524a2d"}
zapatos-cached-packages = { package = "aptos-cached-packages", git = "https://github.com/0o-de-lally/zapatos.git", rev = "3e524a2d" }
zapatos-github-client = { package = "aptos-github-client", git = "https://github.com/0o-de-lally/zapatos.git", rev = "3e524a2d"}
zapatos-release-builder = { package = "aptos-release-builder", git = "https://github.com/0o-de-lally/zapatos.git", rev = "3e524a2d"}
zapatos-language-e2e-tests = { package = "aptos-language-e2e-tests", git = "https://github.com/0o-de-lally/zapatos.git", rev = "3e524a2d"}
zapatos-state-view = { package = "aptos-state-view", git = "https://github.com/0o-de-lally/zapatos.git", rev = "3e524a2d"}
zapatos-storage-interface= { package = "aptos-storage-interface", git = "https://github.com/0o-de-lally/zapatos.git", rev = "3e524a2d"}

zapatos-temppath = { package = "aptos-temppath", git = "https://github.com/0o-de-lally/zapatos.git", rev = "3e524a2d"}

bcs = { git = "https://github.com/aptos-labs/bcs.git", branch = "main" }

### External crate dependencies.
anyhow = "1.0.70"
async-trait = "0.1.68"
base64 = "0.13.0"
blst = "0.3.7"
byteorder = { version = "1.4.3", default-features = false }
chrono = { version = "0.4.19", features = ["clock", "serde"] }
# clap = { version = "4.2.7", features = ["derive", "env", "suggestions"] }
clap = { version = "3.2.23", features = ["derive", "env", "suggestions"]}

colored = "2.0.0"
console = "0.15.5"
dialoguer = "0.10.4"
dirs = "5.0.1"
futures = "= 0.3.24"
git2 = "0.16.1"
glob = "0.3.0"
include_dir = { version = "0.7.2", features = ["glob"] }
indicatif = "0.17.3"
indoc = "2.0.1"
hex = { version = "0.4.3", features = ["serde"] } # //////// 0L ////////
hmac = "0.10.1" # //////// 0L ////////
mirai-annotations = "1.12.0" # //////// 0L ////////
once_cell = "1.17.1"
pbkdf2 = "0.7.3" # //////// 0L ////////
# proptest = "1.0.0"
# proptest-derive = "0.3.0"
rand = "0.7.3" # //////// 0L ////////
reqwest = { version = "0.11.11", features = ["blocking", "cookies", "json", "stream"] }
rpassword = "5.0" # //////// 0L ////////
serde = { version = "1.0.159", features = ["derive", "rc"] }
serde_json = "1.0.95"
serde_yaml = "0.9.21"
sha2 = "0.9.3"  # //////// 0L ////////
tokio = { version = "1.28.0", features = ["full"] }
toml = "0.5.9"
ureq = { version = "1.5.4", features = [
  "json",
  "native-tls",
], default_features = false }
url = { version = "2.3.1", features = ["serde"] }

### MOVE DEPENDENCIES
# move-abigen = { path = "third_party/move/move-prover/move-abigen" }
# move-binary-format = { path = "third_party/move/move-binary-format" }
# ... see full list in Aptos repo
move-binary-format = { git = "https://github.com/0o-de-lally/zapatos.git", rev = "3e524a2d" }
move-core-types = { git = "https://github.com/0o-de-lally/zapatos.git", rev = "3e524a2d"}
move-command-line-common = { git = "https://github.com/0o-de-lally/zapatos.git", rev = "3e524a2d" }
move-model = { git = "https://github.com/0o-de-lally/zapatos.git", rev = "3e524a2d" }

[profile.release]
opt-level = 'z'   # Optimize for size.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = 'abort'   # Abort on panic

[profile.bench]
debug = true

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked" # Requires rustc 1.51
lto = false
incremental = true



# # This is a temporary workaround to avoid multiple library
# # definitions for LZ4 (caused by rust-rocksdb).
# # This will be removed once our pull requests land.
# # https://github.com/rust-rocksdb/rust-rocksdb/issues/666
# [patch.crates-io]
# rocksdb = { git = 'https://github.com/aptos-labs/rust-rocksdb' }
# serde-reflection = { git = "https://github.com/aptos-labs/serde-reflection", rev = "839aed62a20ddccf043c08961cfe74875741ccba" }
