[workspace]
resolver = "2"

members = [
  "framework",
  "framework/cached-packages",
  "smoke-tests",
  "tools/cli",
  "tools/config",
  "tools/genesis",
  "tools/query",
  "tools/rescue",
  "tools/tower",
  "tools/txs",
  "tools/wallet",
  "transactional-tests",
  "types",
]

# All workspace members should inherit these keys for package declarations.
[workspace.package]
authors = ["libra contributors"]
edition = "2021"
homepage = "https://0l.network/"
license = "Apache-2.0"
publish = false
repository = "https://github.com/0LNetworkCommunity/libra-v7"
rust-version = "1.70.0"

[workspace.dependencies]
######## Internal crate dependencies ########
# Internal crate dependencies.
libra-cached-packages = { path = "framework/cached-packages" }
libra-config = { path = "tools/config" }
libra-framework = { path = "framework" }
libra-genesis-tools = { path = "tools/genesis" }
libra-query = { path = "tools/query" }
libra-smoke-tests = { path = "smoke-tests" }
libra-tower = { path = "tools/tower" }
libra-types = { path = "types" }
libra-txs = { path = "tools/txs" }
libra-wallet = { path = "tools/wallet" }
vdf = { git = "https://github.com/0o-de-lally/verifiable_delay.git" }

diem-api-types = { git = "https://github.com/0LNetworkCommunity/diem.git", rev = "8725477" }
diem-debugger = { git = "https://github.com/0LNetworkCommunity/diem.git", rev = "8725477" }
diem-db = { git = "https://github.com/0LNetworkCommunity/diem.git", rev = "8725477" }
diem-forge = { git = "https://github.com/0LNetworkCommunity/diem.git", rev = "8725477" }
diem-transactional-test-harness = { git = "https://github.com/0LNetworkCommunity/diem.git", rev = "8725477" }
smoke-test = { package = "smoke-test", git = "https://github.com/0LNetworkCommunity/diem.git", rev = "8725477" }

diem = { git = "https://github.com/0LNetworkCommunity/diem.git", rev = "8725477" }
diem-build-info = { git = "https://github.com/0LNetworkCommunity/diem.git", rev = "8725477" }
diem-node = { git = "https://github.com/0LNetworkCommunity/diem.git", rev = "8725477" }
diem-rest-client = { git = "https://github.com/0LNetworkCommunity/diem.git", rev = "8725477" }
diem-sdk = { git = "https://github.com/0LNetworkCommunity/diem.git", rev = "8725477" }
diem-config = { git = "https://github.com/0LNetworkCommunity/diem.git", rev = "8725477" }
diem-crypto = { git = "https://github.com/0LNetworkCommunity/diem.git", rev = "8725477" }
diem-genesis = { git = "https://github.com/0LNetworkCommunity/diem.git", rev = "8725477" }
diem-global-constants = { git = "https://github.com/0LNetworkCommunity/diem.git", rev = "8725477" }
diem-keygen = { git = "https://github.com/0LNetworkCommunity/diem.git", rev = "8725477" }
diem-logger = { git = "https://github.com/0LNetworkCommunity/diem.git", rev = "8725477" }
diem-types = { git = "https://github.com/0LNetworkCommunity/diem.git", rev = "8725477" }
diem-gas = { git = "https://github.com/0LNetworkCommunity/diem.git", rev = "8725477" }
diem-vm = { git = "https://github.com/0LNetworkCommunity/diem.git", rev = "8725477" }
diem-vm-genesis = { git = "https://github.com/0LNetworkCommunity/diem.git", rev = "8725477" }
diem-vm-types = { git = "https://github.com/0LNetworkCommunity/diem.git", rev = "8725477" }
diem-executor = { git = "https://github.com/0LNetworkCommunity/diem.git", rev = "8725477" }
diem-framework = { git = "https://github.com/0LNetworkCommunity/diem.git", rev = "8725477" }
diem-cached-packages = { git = "https://github.com/0LNetworkCommunity/diem.git", rev = "8725477" }
diem-github-client = { git = "https://github.com/0LNetworkCommunity/diem.git", rev = "8725477" }
diem-release-builder = { git = "https://github.com/0LNetworkCommunity/diem.git", rev = "8725477" }
diem-language-e2e-tests = { git = "https://github.com/0LNetworkCommunity/diem.git", rev = "8725477" }
diem-state-view = { git = "https://github.com/0LNetworkCommunity/diem.git", rev = "8725477" }
diem-storage-interface = { git = "https://github.com/0LNetworkCommunity/diem.git", rev = "8725477" }
diem-temppath = { git = "https://github.com/0LNetworkCommunity/diem.git", rev = "8725477" }

### External crate dependencies.
# 0L NOTE: most of these are not used. But we leave the entire block here
# so when there is an import we use one compatible with vendor.
# And when vendor updates dependencies we can copy the whole block.

again = "0.1.2"
anyhow = "1.0.62"
anstyle = "1.0.1"
arc-swap = "1.5.0"
arr_macro = "0.1.3"
ark-bls12-381 = "0.4.0"
ark-ec = "0.4.0"
ark-ff = "0.4.0"
ark-serialize = "0.4.0"
ark-std = { version = "0.4.0", features = ["getrandom"] }
assert_approx_eq = "1.1.0"
assert_unordered = "0.1.1"
async-stream = "0.3"
async-trait = "0.1.53"
axum = "0.5.16"
base64 = "0.13.0"
backoff = { version = "0.4.0", features = ["tokio"] }
backtrace = "0.3.58"
bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }
better_any = "0.1.1"
bigdecimal = { version = "0.3.0", features = ["serde"] }
bitvec = "0.19.4"
blake2 = "0.10.4"
blake2-rfc = "0.2.18"
blst = "0.3.7"
byteorder = "1.4.3"
bytes = "1.1.0"
chrono = { version = "0.4.19", features = ["clock", "serde"] }
cfg_block = "0.1.1"
cfg-if = "1.0.0"
claims = "0.7"
clap = { version = "4.3.5", features = ["derive", "unstable-styles"] }
clap_complete = "4.3.1"
cloud-storage = { version = "0.11.1", features = ["global-client"] }
codespan-reporting = "0.11.1"
console-subscriber = "0.1.8"
const_format = "0.2.26"
criterion = "0.3.5"
criterion-cpu-time = "0.1.0"
crossbeam = "0.8.1"
crossbeam-channel = "0.5.4"
csv = "1.2.1"
curve25519-dalek = "3"
dashmap = "5.2.0"
datatest-stable = "0.1.1"
debug-ignore = { version = "1.0.3", features = ["serde"] }
derivative = "2.2.0"
diesel = { version = "2.1.0", features = [
  "chrono",
  "postgres",
  "r2d2",
  "numeric",
  "serde_json",
] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
digest = "0.9.0"
dir-diff = "0.3.2"
dirs = "4.0.0"
ed25519-dalek = { version = "1.0.1", features = ["std", "serde"] }
ed25519-dalek-bip32 = "0.2.0"
either = "1.6.1"
enum_dispatch = "0.3.8"
env_logger = "0.9.0"
erased-serde = "0.3.13"
event-listener = "2.5.3"
fail = "0.5.0"
field_count = "0.1.1"
flate2 = "1.0.24"
fs_extra = "1.2.0"
futures = "= 0.3.24" # Previously futures v0.3.23 caused some consensus network_tests to fail. We now pin the dependency to v0.3.24.
futures-channel = "= 0.3.24"
futures-core = "0.3.25"
futures-util = "0.3.21"
gcp-bigquery-client = "0.13.0"
get_if_addrs = "0.5.3"
git2 = "0.16.1"
git-version = "0.3.5"
glob = "0.3.0"
goldenfile = "1.1.0"
handlebars = "4.2.2"
heck = "0.3.2"
# hex = "0.4.3"
hkdf = "0.10.0"
hostname = "0.3.1"
http = "0.2.3"
httpmock = "0.6"
hyper = { version = "0.14.18", features = ["full"] }
hyper-tls = "0.5.0"
include_dir = { version = "0.7.2", features = ["glob"] }
# indicatif = "0.15.0"
indoc = "1.0.6"
inferno = "0.11.14"
ipnet = "2.5.0"
itertools = "0.10.3"
jemallocator = { version = "0.3.2", features = [
  "profiling",
  "unprefixed_malloc_on_supported_platforms",
] }
json-patch = "0.2.6"
jsonwebtoken = "8.1"
libfuzzer-sys = "0.4.6"
libsecp256k1 = "0.7.0"
log = "0.4.17"
lru = "0.7.5"
lz4 = "1.24.0"
maplit = "1.0.2"
mime = "0.3.16"
mirai-annotations = "1.12.0"
mockall = "0.11.0"
more-asserts = "0.3.0"
native-tls = "0.2.10"
ntest = "0.9.0"
num_cpus = "1.13.1"
num-derive = "0.3.3"
num-traits = "0.2.15"
once_cell = "1.10.0"
ouroboros = "0.15.6"
owo-colors = "3.5.0"
parking_lot = "0.12.0"
paste = "1.0.7"
pbjson = "0.4.0"
percent-encoding = "2.1.0"
pin-project = "1.0.10"
poem = { version = "=1.3.55", features = ["anyhow", "rustls"] }
poem-openapi = { version = "=2.0.11", features = ["swagger-ui", "url"] }
poem-openapi-derive = "=2.0.11"
pretty_assertions = "1.2.1"
procfs = "0.14.1"
proc-macro2 = "1.0.38"
project-root = "0.2.2"
prometheus = { version = "0.13.0", default-features = false }
prometheus-http-query = "0.5.2"
prometheus-parse = "0.2.4"
proptest = "1.0.0"
proptest-derive = "0.3.0"
prost = "0.11.3"
prost-types = "0.10.1"
quanta = "0.10.1"
quote = "1.0.18"
rand = "0.7.3"
rand_core = "0.5.1"
random_word = "0.3.0"
rayon = "1.5.2"
redis = { version = "0.22.3", features = ["tokio-comp", "script"] }
redis-test = { version = "0.1.1", features = ["aio"] }
regex = "1.5.5"
reqwest = { version = "0.11.11", features = [
  "blocking",
  "cookies",
  "json",
  "stream",
] }
reqwest-middleware = "0.2.0"
reqwest-retry = "0.2.1"
ring = { version = "0.16.20", features = ["std"] }
ripemd = "0.1.1"
rocksdb = { version = "0.21.0", features = ["lz4"] }
rstest = "0.15.0"
rusty-fork = "0.3.0"
sha-1 = "0.10.0"
sha2 = "0.9.3"
sha2_0_10_6 = { package = "sha2", version = "0.10.6" }
sha3 = "0.9.1"
siphasher = "0.3.10"
serde = { version = "1.0.137", features = ["derive", "rc"] }
serde_bytes = "0.11.6"
serde_json = { version = "1.0.81", features = ["preserve_order"] }
serde_repr = "0.1"
serde_merge = "0.1.3"
serde-name = "0.1.1"
serde-generate = { git = "https://github.com/diem-labs/serde-reflection", rev = "839aed62a20ddccf043c08961cfe74875741ccba" }
serde-reflection = { git = "https://github.com/diem-labs/serde-reflection", rev = "839aed62a20ddccf043c08961cfe74875741ccba" }
serde_yaml = "0.8.24"
shadow-rs = "0.16.2"
smallvec = "1.8.0"
static_assertions = "1.1.0"
stats_alloc = "0.1.8"
status-line = "0.2.0"
strum = "0.24.1"
strum_macros = "0.24.2"
structopt = "0.3.21"
substreams = "0.0.17"
syn = { version = "1.0.92", features = ["derive", "extra-traits"] }
sysinfo = "0.28.4"
tempfile = "3.3.0"
termcolor = "1.1.2"
textwrap = "0.15.0"
thiserror = "1.0.37"
tiny-bip39 = "0.8.2"
tiny-keccak = { version = "2.0.2", features = ["keccak", "sha3"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.17", features = ["json", "env-filter"] }
trybuild = "1.0.70"
tokio = { version = "1.21.0", features = ["full"] }
tokio-io-timeout = "1.2.0"
tokio-metrics = "0.1.0"
tokio-retry = "0.3.0"
tokio-stream = "0.1.8"
tokio-test = "0.4.1"
tokio-util = { version = "0.7.2", features = ["compat", "codec"] }
toml = "0.5.9"
tonic = { version = "0.8.3", features = [
  "tls-roots",
  "transport",
  "prost",
  "gzip",
  "codegen",
] }
tonic-reflection = "0.6.0"
ureq = { version = "1.5.4", features = [
  "json",
  "native-tls",
], default_features = false }
url = { version = "2.2.2", features = ["serde"] }
uuid = { version = "1.0.0", features = ["v4", "serde"] }
walkdir = "2.3.2"
warp = { version = "0.3.3", features = ["tls"] }
warp-reverse-proxy = "0.5.0"
which = "4.2.5"
x25519-dalek = "1.2.0"

######## 0L #########
colored = "2.0.0"
console = "0.15.5"
dialoguer = "0.10.4"
hex = { version = "0.4.3", features = ["serde"] }
hmac = "0.10.1"
indicatif = "0.17.3"
pbkdf2 = "0.7.3"
rpassword = "5.0"
serde_with = "^3"

######## MOVE DEPENDENCIES ########
# move-abigen = { path = "third_party/move/move-prover/move-abigen" }
# move-binary-format = { path = "third_party/move/move-binary-format" }
# ... see full list in Aptos repo
move-binary-format = { git = "https://github.com/0LNetworkCommunity/diem.git", rev = "8725477" }
move-core-types = { git = "https://github.com/0LNetworkCommunity/diem.git", rev = "8725477" }
move-command-line-common = { git = "https://github.com/0LNetworkCommunity/diem.git", rev = "8725477" }
move-compiler = { git = "https://github.com/0LNetworkCommunity/diem.git", rev = "8725477" }
move-model = { git = "https://github.com/0LNetworkCommunity/diem.git", rev = "8725477" }
move-vm-test-utils = { git = "https://github.com/0LNetworkCommunity/diem.git", rev = "8725477" }
move-vm-types = { git = "https://github.com/0LNetworkCommunity/diem.git", rev = "8725477" }

# uses a profile similar to `cli` in Diem/Cargo.toml
# optimized for performance and size
# if you are hunting bugs, this is not the profile to use.
[profile.release]
opt-level = 'z'   # Optimize for size.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = 'abort'   # Abort on panic
debug = false     # remove debug on compile
strip = true      # strip debug and symbols for size

[profile.bench]
debug = true

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
lto = false
incremental = true

[profile.test]
inherits = "dev"

# # This is a temporary workaround to avoid multiple library
# # definitions for LZ4 (caused by rust-rocksdb).
# # This will be removed once our pull requests land.
[patch.crates-io]
serde-reflection = { git = "https://github.com/aptos-labs/serde-reflection", rev = "839aed62a20ddccf043c08961cfe74875741ccba" }