[package]
name = "libra-e2e-tests"
description = "Collects e2e test scripts. Not a library."
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dev-dependencies]
move-core-types = { workspace = true }

zapatos-framework = { workspace = true }
zapatos-language-e2e-tests = { workspace = true }
zapatos-types = { workspace = true }

