[package]
name = "libra-framework"
description = "Builds framework packages for caching in builds and tests"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
bcs = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
once_cell = { workspace = true }

zapatos = { workspace = true }
zapatos-build-info = { workspace = true }
zapatos-crypto = { workspace = true }
zapatos-framework = { workspace = true }
zapatos-build-info = { workspace = true }
move-command-line-common = { workspace = true }
move-model = { workspace = true }

[build-dependencies]
zapatos-framework = { workspace = true }



