[package]
name = "libra-framework"
description = "Builds framework packages for caching in builds and tests"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
bcs = { workspace = true }
clap = { workspace = true }
dialoguer = { workspace = true }
diem = { workspace = true }
diem-build-info = { workspace = true }
diem-crypto = { workspace = true }
diem-framework = { workspace = true }
diem-types = { workspace = true }
git2 = { workspace = true }
hex = { workspace = true }
move-command-line-common = { workspace = true }
move-model = { workspace = true }
once_cell = { workspace = true }

[build-dependencies]
diem-framework = { workspace = true }



