[package]
name = "libra-smoke-tests"
description = "test harness for 0L modules"
version = { workspace = true }

# Workspace inherited keys
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
diem-crypto = { workspace = true }
diem-forge = { workspace = true}
diem-sdk = { workspace = true }
diem-temppath = { workspace = true }
diem-types = { workspace = true }
libra-cached-packages = { workspace = true }
libra-framework = { workspace = true }
libra-types = { workspace = true }
serde_json = { workspace = true }
smoke-test = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

[dev-dependencies]
diem-config = { workspace = true }
diem-logger = { workspace = true }

[features]
#default = ["testing"]
testing = []
