[package]
name = "libra-smoke-tests"

# Workspace inherited keys
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }


[dependencies]
anyhow = { workspace = true }
diem-crypto = { workspace = true }
diem-forge = { workspace = true}
diem-genesis = { workspace = true }
diem-sdk = { workspace = true }
diem-temppath = { workspace = true }
diem-types = { workspace = true }
hex = { workspace = true }
libra-cached-packages = { workspace = true }
libra-config  = { workspace = true }
libra-framework = { workspace = true }
libra-query = { workspace = true }
libra-types = { workspace = true }
serde_json = { workspace = true }
serde_yaml  = { workspace = true }
smoke-test = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

[dev-dependencies]
diem-config = { workspace = true }
diem-logger = { workspace = true }
