[package]
name = "transactional-tests"
# Workspace inherited keys
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
datatest-stable = "0.1.1"
diem-transactional-test-harness = { workspace = true }
