[package]
name = "libra-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bcs = { workspace = true }
console = { workspace = true }
dirs = { workspace = true }
futures = { workspace  = true }
glob = { workspace = true }
hex = { workspace = true }
indicatif = { workspace = true }
move-core-types = { workspace = true }
once_cell = { workspace = true }
rand =  { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
url = { workspace = true }
zapatos = { workspace = true }
zapatos-api-types = { workspace = true }
zapatos-crypto = { workspace = true }
zapatos-rest-client = { workspace = true }
zapatos-sdk = { workspace = true }
zapatos-types = { workspace = true }
