[package]
name = "libra-types"

# Workspace inherited keys
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }


[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bcs = { workspace = true }
clap = { workspace = true }
console = { workspace = true }
diem = { workspace = true }
diem-api-types = { workspace = true }
diem-crypto = { workspace = true }
diem-global-constants = { workspace = true }
diem-rest-client = { workspace = true }
diem-sdk = { workspace = true }
diem-types = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
glob = { workspace = true }
hex = { workspace = true }
indicatif = { workspace = true }
move-core-types = { workspace = true }
once_cell = { workspace = true }
rand =  { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
url = { workspace = true }

[dev-dependencies]
diem-temppath = { workspace = true }
