[package]
name = "libra-warehouse"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
glob = { workspace = true }
tokio ={ workspace = true }
