[package]
name = "libra-warehouse"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
glob = { workspace = true }
libra-backwards-compatibility = { workspace = true }
libra-storage = { workspace =  true }
libra-types = { workspace =  true }
once_cell = { workspace =  true }
sqlx = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
testcontainers = { workspace = true }
