[package]
name = "libra-warehouse"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
diem-temppath = { workspace = true }
diem-types = { workspace = true }
diem-crypto = { workspace = true }
env_logger = { workspace =  true }
flate2 = { workspace = true }
glob = { workspace = true }
libra-backwards-compatibility = { workspace = true }
libra-cached-packages = { workspace = true }
libra-storage = { workspace =  true }
libra-types = { workspace =  true }
log = { workspace = true }
once_cell = { workspace =  true }
serde = { workspace =  true }
serde_json = { workspace =  true }
sqlx = { workspace = true }
tokio = { workspace = true }
neo4rs = { workspace = true }


[dev-dependencies]
testcontainers = { workspace = true }
