[package]
name = "libra-cached-packages"
description = "Builds framework packages for caching in builds and tests"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
# Note the generated SDK code uses hard coded `aptos-types`
aptos-types = { git = "https://github.com/0o-de-lally/zapatos.git", rev = "14db26a3f6"}

# libra-framework = { workspace = true }
bcs = { workspace = true }
move-core-types = { workspace = true }
once_cell = { workspace = true }
# proptest = { workspace = true, optional = true }
proptest-derive = { workspace = true, optional = true }


[build-dependencies]
libra-framework = { workspace = true }

# [features]
# default = []
# fuzzing = ["proptest", "proptest-derive"]